<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.12</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.tech.Petfriend</groupId>
	<artifactId>Petfriend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Petfriend</name>
	<description>Demo project for Spring Boot</description>
	<url />
	<licenses>
		<license />
	</licenses>
	<developers>
		<developer />
	</developers>
	<scm>
		<connection />
		<developerConnection />
		<tag />
		<url />
	</scm>
	<properties>
		<java.version>11</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- tomcat jasper -->
		<dependency>
			<!--
			https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-jasper</artifactId>
			<version>9.0.52</version>
		</dependency>

		<!-- Lombok -->
		<dependency>
			<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.24</version>
			<scope>provided</scope>
		</dependency>

		<!-- Jstl -->
		<dependency>
			<!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl -->
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- MyBatis -->
		<dependency>
			<!--
			https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter</artifactId>
			<version>2.2.2</version>
		</dependency>

		<!-- AOP -->
		<dependency>
			<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.9.6</version>
			<!-- <scope>runtime</scope> -->
		</dependency>

		<!-- MockMvc -->
		<dependency>
			<!--
			https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>2.5.4</version>
			<scope>test</scope>
		</dependency>

		<!-- Webflux (Web Client) -->
		<dependency>
			<!--
			https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux -->
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
			<version>3.2.5</version>
		</dependency>

		<!-- JSON in java -->
		<dependency>
			<!-- https://mvnrepository.com/artifact/org.json/json -->
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20231013</version>
		</dependency>

		<!-- Spring Web -->
		<dependency>
		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>5.3.24</version>
		</dependency>


	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

		</plugins>
	</build>

</project>
